--- a/templates/home.html
+++ b/templates/home.html
@@ -3,56 +3,51 @@
 {% load static %}
 
 {% block css %}
-<link rel="stylesheet" href="{% static 'homepage/css/estilo.css' %}">
+<link rel="stylesheet" href="{% static 'navbar/css/style.css' %}">
 <script src="https://kit.fontawesome.com/f363b53072.js"></script>
 {% endblock %}
 
 {% block content %}
 
-{% if request.user.is_authenticated %}
-
-<h1>you are logged in</h1>
-
-{% endif %}
 
     <div class="img-slider">
         <div class="slide active">
-            <img src="{% static 'homepage/images/jordan1.jpg' %}" alt="">
+            <img src="{% static 'navbar/images/jordan1.jpg' %}" alt="">
             <div class="info">
                 <a href="#" class="slide-title">Sneakers</a>
                 <p>You can buy new sneakers and shoes here, always available and authentic.</p>
             </div>
         </div>
         <div class="slide">
-            <img src="{% static 'homepage/images/bapetee1.jpg' %}" alt="">
+            <img src="{% static 'navbar/images/bapetee1.jpg' %}" alt="">
             <div class="info">
                 <a href="#" class="slide-title">T-Shirts</a>
                 <p>Your t-shirts collection can be expanded with our shop.</p>
             </div>
         </div>
         <div class="slide">
-            <img src="{% static 'homepage/images/jean1.jpg' %}" alt="">
+            <img src="{% static 'navbar/images/jean1.jpg' %}" alt="">
             <div class="info">
                 <a href="#" class="slide-title">Bottoms</a>
                 <p>The most purchased jeans are here for you.</p>
             </div>
         </div>
         <div class="slide">
-            <img src="{% static 'homepage/images/asschoodie1.jpg' %}" alt="">
+            <img src="{% static 'navbar/images/asschoodie1.jpg' %}" alt="">
             <div class="info">
                 <a href="#" class="slide-title">Hoodies</a>
                 <p>In our shop we brings you all type of hoodies for your style.</p>
             </div>
         </div>
         <div class="slide">
-            <img src="{% static 'homepage/images/outerwear1.jpg' %}" alt="">
+            <img src="{% static 'navbar/images/outerwear1.jpg' %}" alt="">
             <div class="info">
                 <a href="#" class="slide-title">Outerwear</a>
                 <p>You can choose a wide variety of jackets, vests and more outerwears.</p>
             </div>
         </div>
         <div class="slide">
-            <img src="{% static 'homepage/images/accesories1.jpg' %}" alt="">
+            <img src="{% static 'navbar/images/accesories1.jpg' %}" alt="">
             <div class="info">
                 <a href="#" class="slide-title">Accesories</a>
                 <p>We brings you new glasses, watches and all sort of accesories.</p>
@@ -68,6 +63,164 @@
         </div>
     </div>
 
-    {% block js %}<script src="{% static 'homepage/javascript/script-home.js' %}"></script>{% endblock %}
+    <div class="card-list" id="card-list">
+        <button class="arrows one" id="slide-left"><i class="fas fa-angle-left"></i></button>
+    <div class="card-container" id="card-container">
+        
+    <div class="card" id="card">
+        <span class="card-tag">Pre-Order now</span>
+        <div class="card-header">
+            <img src="{% static 'navbar/images/jordan2.jpg' %}">
+        </div>
+        <div class="card-body">
+            <h4 class="product-title">Jordan 13 Flint</h4>
+            <p class="product-status">Ships in 3-4 days</p>
+            <h3 class="product-price">$120.00</h3>
+        </div>
+        <div class="card-footer">
+            <a href="#">
+                <button class="card-btn btn-secondary">
+                    Info
+                </button>
+            </a>
+            <a href="#">
+                <button class="card-btn btn-primary">
+                    Pre-order
+                </button>
+            </a>
+        </div>
+    </div>
+    <div class="card" id="card">
+        <span class="card-tag">Pre-Order now</span>
+        <div class="card-header">
+            <img src="{% static 'navbar/images/jean2.jpg' %}">
+        </div>
+        <div class="card-body">
+            <h4 class="product-title">Palace Moschino Jean</h4>
+            <p class="product-status">Ships in 3-4 days</p>
+            <h3 class="product-price">$205.00</h3>
+        </div>
+        <div class="card-footer">
+            <a href="#">
+                <button class="card-btn btn-secondary">
+                    Info
+                </button>
+            </a>
+            <a href="#">
+                <button class="card-btn btn-primary">
+                    Pre-order
+                </button>
+            </a>
+        </div>
+    </div>
+    <div class="card" id="card">
+        <span class="card-tag">Pre-Order now</span>
+        <div class="card-header">
+            <img src="{% static 'navbar/images/accesories2.jpg' %}">
+        </div>
+        <div class="card-body">
+            <h4 class="product-title">Roque's Gold Chain</h4>
+            <p class="product-status">Ships in 3-4 days</p>
+            <h3 class="product-price">$18580.00</h3>
+        </div>
+        <div class="card-footer">
+            <a href="#">
+                <button class="card-btn btn-secondary">
+                    Info
+                </button>
+            </a>
+            <a href="#">
+                <button class="card-btn btn-primary">
+                    Pre-order
+                </button>
+            </a>
+        </div>
+    </div>
+    <div class="card" id="card">
+        <span class="card-tag">Pre-Order now</span>
+        <div class="card-header">
+            <img src="{% static 'navbar/images/outerwear2.jpg' %}">
+        </div>
+        <div class="card-body">
+            <h4 class="product-title">Supreme The North Face</h4>
+            <p class="product-status">Ships in 3-4 days</p>
+            <h3 class="product-price">$985.00</h3>
+        </div>
+        <div class="card-footer">
+            <a href="#">
+                <button class="card-btn btn-secondary">
+                    Info
+                </button>
+            </a>
+            <a href="#">
+                <button class="card-btn btn-primary">
+                    Pre-order
+                </button>
+            </a>
+        </div>
+    </div>
+    <div class="card" id="card">
+        <span class="card-tag">Pre-Order now</span>
+        <div class="card-header">
+            <img src="{% static 'navbar/images/jordantee1.jpg' %}">
+        </div>
+        <div class="card-body">
+            <h4 class="product-title">Supreme Jordan Tee</h4>
+            <p class="product-status">Ships in 3-4 days</p>
+            <h3 class="product-price">$300.00</h3>
+        </div>
+        <div class="card-footer">
+            <a href="#">
+                <button class="card-btn btn-secondary">
+                    Info
+                </button>
+            </a>
+            <a href="#">
+                <button class="card-btn btn-primary">
+                    Pre-order
+                </button>
+            </a>
+        </div>
+    </div>
+    <div class="card" id="card">
+        <span class="card-tag">Pre-Order now</span>
+        <div class="card-header">
+            <img src="{% static 'navbar/images/bapehoodie1.jpg' %}">
+        </div>
+        <div class="card-body">
+            <h4 class="product-title">BAPE x XO Hoodie</h4>
+            <p class="product-status">Ships in 3-4 days</p>
+            <h3 class="product-price">$787.00</h3>
+        </div>
+        <div class="card-footer">
+            <a href="#">
+                <button class="card-btn btn-secondary">
+                    Info
+                </button>
+            </a>
+            <a href="#">
+                <button class="card-btn btn-primary">
+                    Pre-order
+                </button>
+            </a>
+        </div>
+
+    </div>
+    </div>
+        <button class="arrows two" id="slide-right"><i class="fas fa-angle-right"></i></button>
+        <script type="text/javascript">
+            var buttonLeft = document.getElementById('slide-left');
+            var buttonRight = document.getElementById('slide-right');
+    
+                buttonLeft.addEventListener('click', function(){
+                    document.getElementById('card-container').scrollLeft -= 180
+                })
+                buttonRight.addEventListener('click', function(){
+                    document.getElementById('card-container').scrollLeft += 180
+                })
+        </script>
+    </div>
+
+    {% block js %}<script src="{% static 'navbar/javascript/script-home.js' %}"></script>{% endblock %}
 
 {% endblock %}
