--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,28 +18,26 @@ seguimos poniendo el resto del path segun corresponda-->
             ECOMMERCE
         </a>
 
-        <form>
+     
             <div class="search-container">
-                <input type="text" placeholder="Search..." name="search">
-                <button type="submit"><i class="fa fa-search"></i></button>
+                <input type="text" placeholder="" id="search">
+                <p id="tip">Click to search...</p>
+                <i class="fa fa-search" alt="search button" id="search-btn"></i>
             </div>
-        </form>
-            
-        </div>
 
         <div class="navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">New arrivals</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Shop</a>
+                    <a href="#" class="nav-link">Pre-Order now</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Search</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Gift cards</a>
+                    <a href="#" class="nav-link">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Sign up</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link"><span class="span-about">About us</span></a>
@@ -50,7 +48,7 @@ seguimos poniendo el resto del path segun corresponda-->
         <div class="navbar-side">
             <ul class="nav-item-side">
                 <span class="center">
-                    Trending
+                    Pre-order now
                 </span>
                 <span class="center">
                     Visit us
@@ -88,6 +86,6 @@ seguimos poniendo el resto del path segun corresponda-->
 </header>
 
               <!--js-->
-{% block js %}<script src="{% static 'navbar/javascript/script.js' %}"></script>{% endblock %}
+{% block js %}<script src="{% static 'navbar/javascript/scripts.js' %}"></script>{% endblock %}
 
 
