--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,15 +1,23 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block css %}
+<link rel="stylesheet" href="{% static 'navbar/css/sty.css' %}">
+<script src="https://kit.fontawesome.com/f363b53072.js"></script>
+{% endblock %}
 {% block content %}
-<h2>Log In</h2>
+<div class="log-container">
+  <h2 class="log-title"><i class="fas fa-dragon"></i>Log In</h2>
 {% if messages %}
 {% for message in messages %}
 {{ message }}
 {% endfor %}
 {% endif %}
-<form method="post">
+<form method="post" class="log-text">
   {% csrf_token %}
   {{ form.username.label }}: {{ form.username }} <br> <br>
   {{ form.password.label }}: {{ form.password}} <br> <br>
-  <button type="submit">Log In</button>
+  <button type="submit" class="log-btn">Log In</button>
 </form>
+</div>
 {% endblock %}
