--- a/accounts/templates/accounts/user_registration.html
+++ b/accounts/templates/accounts/user_registration.html
@@ -1,6 +1,14 @@
 {% extends 'base.html' %}
+
+{% load static %}
+
+{% block css %}
+<link rel="stylesheet" href="{% static 'navbar/css/style.css' %}">
+<script src="https://kit.fontawesome.com/f363b53072.js"></script>
+{% endblock %}
+
 {% block content %}
-<form method='POST', action=''>
+<form method='POST', action='' class="signup-container">
     {% csrf_token %}
 
    {{ form.username.label }}: {{ form.username }} <br>Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.<br>
@@ -18,8 +26,9 @@
 </form>
 
 {% if messages %}
-    {% for message in messages %}
-    {% endfor %}
+{% for message in messages %}
+    {{ message }}
+{% endfor %}
 {% endif %}
 
 {% endblock %}
