--- a/accounts/templates/accounts/user_registration.html
+++ b/accounts/templates/accounts/user_registration.html
@@ -8,7 +8,9 @@
 {% endblock %}
 
 {% block content %}
-<form method='POST', action='' class="signup-container">
+<div class="signup-container">
+    <h2 class="signup-title"><i class="fas fa-dragon"></i>Sign Up</h2>
+<form method='POST', action='' class="signup-text">
     {% csrf_token %}
 
    {{ form.username.label }}: {{ form.username }} <br>Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.<br>
@@ -22,8 +24,9 @@
    <br>Enter the same password as before, for verification.
 
 <br>
-    <input type="submit" value='Save' />
+    <input type="submit" class="signup-btn" value='Save' />
 </form>
+</div>
 
 {% if messages %}
 {% for message in messages %}
