--- a/profiles/templates/profiles/profile_edit.html
+++ b/profiles/templates/profiles/profile_edit.html
@@ -1,10 +1,20 @@
 {% extends 'base.html' %}
+
+{% load static %}
+
+{% block css %}
+<link rel="stylesheet" href="{% static 'navbar/css/style.css' %}">
+<script src="https://kit.fontawesome.com/f363b53072.js"></script>
+{% endblock %}
+
 {% block content %}
-<form enctype="multipart/form-data" method="POST"> 
+<div class="profile-container">
+<form enctype="multipart/form-data" method="POST" class="profile-text"> 
     {% csrf_token %}
     {{ form.as_p }}
 
     <input type="submit" value='Save' />
 </form>
+</div>
 
 {% endblock %}
