--- a/static/navbar/css/style.css
+++ b/static/navbar/css/style.css
@@ -100,13 +100,31 @@ button{
 .alert.hide{
   display: none;
 }  ***/
-
-  /***       log in style       ***/
+  /***       profile style       ***/
+.profile-container{
+  position: absolute;
+  left: 40%;
+  top: 200px;
+  margin: 5px;
+}
+  /***       signup style       ***/
 .signup-container{
   position: absolute;
   left: 40%;
   top: 200px;
   margin: 5px;
+}
+.signup-container .signup-title{
+  text-align: center;
+  color: var(--secondary);
+  font-weight: 300;
+  font-size: 2.5rem;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+}
+.signup-container .signup-title i{
+  text-align: left;
+  margin: 10px;
 }
   /***       log in style       ***/
 .log-container{
