changed login view :)

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,11 +10,12 @@
 {% block content %}
 
     {% if request.user.is_authenticated %}
+        estas logeado
     {% endif %}
 
 {% if messages %}
     {% for message in messages %}
-
+        {{ message }}
     {% endfor %}
 {% endif %}
 
