--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -2,8 +2,11 @@
 
 {% block content %}
     {% if request.user.is_authenticated %}
-    <br><br><br><br><br>
-    profile
+    <br><br><br><br><br><br><br><br><br><br>
+    {{ name }} <br>
+    {{ top_sizes }} <br>
+    {{ shoes_sizes }} <br>
+    {{ date_created }} <br>
     {% else %}
     <br><br><br><br><br>
     you are not logged in.
