Revert "removed top sizes and shoes sizes field"
This reverts commit 669a031c5623c559eb792406f55e0d78684a80c6.

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -2,11 +2,8 @@
 
 {% block content %}
     {% if request.user.is_authenticated %}
-    <br><br><br><br><br><br><br><br><br><br>
-    {{ name }} <br>
-    {{ top_sizes }} <br>
-    {{ shoes_sizes }} <br>
-    {{ date_created }} <br>
+    <br><br><br><br><br>
+    profile
     {% else %}
     <br><br><br><br><br>
     you are not logged in.
