updated product sell

--- a/products/templates/products/product_create.html
+++ b/products/templates/products/product_create.html
@@ -7,10 +7,11 @@
 
    <li>Title: {{ form.title }}</li><br>
    <li>Image: {{ form.image }}</li><br>
-   <li>Description: {{ form.description}}</li><br>
+   <li>Description: {{ form.description }}</li><br>
    <li>Price: {{ form.price }} </li><br>
-   <li>Category: {{ form.category}} </li><br>
-    
+   <li>Category: {{ form.category }} </li><br>
+   <li>Featured : {{ form.featured }} </li>
+    <br>
     <input type="submit" value='Save' />
 </form>
 
