--- a/accounts/templates/accounts/user_registration.html
+++ b/accounts/templates/accounts/user_registration.html
@@ -10,22 +10,16 @@
 {% block content %}
 <div class="signup-container">
     <h2 class="signup-title"><i class="fas fa-dragon"></i>Sign Up</h2>
-<form method='POST', action='' class="signup-text">
-    {% csrf_token %}
+    <form method='POST', action='' class="signup-text">
+        {% csrf_token %}
 
-   {{ form.username.label }}: {{ form.username }} <br>Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.<br>
-   {{ form.email.label }}: {{ form.email }} <br><br>
-   {{ form.password1.label }}: {{ form.password1 }} 
-   <br>Your password can’t be too similar to your other personal information.
-   <br>Your password must contain at least 8 characters.
-   <br>Your password can’t be a commonly used password.
-   <br>Your password can’t be entirely numeric.
-   <br>{{ form.password2.label }}: {{ form.password2 }}
-   <br>Enter the same password as before, for verification.
+        {{ form.username.label }}: {{ form.username }}
+        {{ form.email.label }}: {{ form.email }}
+        {{ form.password1.label }}: {{ form.password1 }}
+        {{ form.password2.label }}: {{ form.password2 }} 
 
-<br>
-    <input type="submit" class="signup-btn" value='Save' />
-</form>
+        <button type="submit" class="signup-btn" title="Sign up now.">Sign up</button>
+    </form>
 </div>
 
 {% if messages %}
