--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-
+<body>
     {% if request.user.is_authenticated %}
     {% endif %}
 
@@ -228,7 +228,7 @@
                 })
         </script>
     </div>
-
+</body>
     {% block js %}<script src="{% static 'navbar/javascript/script-home.js' %}"></script>{% endblock %}
 
 {% endblock %}
